tłumaczenie katalogu bundles - start

--- a/README
+++ b/README
@@ -5,7 +5,7 @@ Struktura katalogów
    |---community
    |---documentation
    |-guides
-   |---bundles
+   |---bundles (P.M)
    |---cache
    |---doctrine
    |-----dbal
